--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ProyectParkingCam</string>
+
+    <string-array name="bloques">
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 </resources>
