Cambios_icono_nombre

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ParkingCam</string>
+    <string name="app_name">AparkTown</string>
 
     <string-array name="bloques">
         <item>1</item>
